# FunASR-Ascend

./: .gitignore  export_onnx.py  main.py  pyproject.toml  stream.py  stream_export.py  stream_predict_funasr.py  stream_predict_onnx.py  stream_predict_pt.py  test_onnx.py
