[project]
name = "funasr-ascend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "scipy>=1.4.1",
    "librosa",
    "jamo",
    "PyYAML>=5.1.2",
    "soundfile>=0.12.1",
    "kaldiio>=2.17.0",
    "torch_complex",
    "sentencepiece",
    "jieba",
    "pytorch_wpe",
    "editdistance>=0.5.2",
    "oss2",
    "tqdm",
    "umap_learn",
    "jaconv",
    "hydra-core>=1.3.2",
    "tensorboardX",
    "requests",
    "modelscope",
    "torch>=2.9.1",
    "torchaudio>=2.9.1",
]

[[tool.uv.index]]
name = "tsinghua"
url = "https://pypi.tuna.tsinghua.edu.cn/simple/"
priority = "primary"
